--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,19 @@
         <title>Paige Cook</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="/css/screen.css">
     </head>
     <body>
         <header>
             <h1>Paige Cook Website</h1>
+            <nav class="navigation">
+                <a class="navigation__item" href="">About Me</a>
+                <a class="navigation__item" href="">Gallery</a>
+                <a class="navigation__item" href="">Contact</a>
+            </nav>
         </header>
         <main>
-            <p>The website is active!</p>
+            <img src="/images/16x9/boat.JPG">
         </main>
     </body>
 </html>
