Add background image

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,6 @@
     </head>
     <body>
         <header>
-            <h1>Paige Cook Website</h1>
             <nav class="navigation">
                 <a class="navigation__item" href="">About Me</a>
                 <a class="navigation__item" href="">Gallery</a>
@@ -16,7 +15,10 @@
             </nav>
         </header>
         <main>
-            <img src="/images/16x9/boat.JPG">
+            <section class="title_page">
+                <img class="title_page__img" src="/images/16x9/boat.JPG">
+                <h1 class="title_page__text">Paige Cook</h1>
+            </section>
         </main>
     </body>
 </html>
