Add newest works

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,20 @@
                 <img class="title_page__img" src="/images/16x9/boat.JPG">
                 <h1 class="title_page__text">Paige Cook</h1>
             </section>
+            <section class="works">
+                <h2 class="works__title">Newest Works</h2>
+                <ul class="wrapper wrapper--works">
+                    <li class="works__img__wrapper">
+                        <img class="works__img" src="/images/4x3/clock.JPG">
+                    </li>
+                    <li class="works__img__wrapper">
+                        <img class="works__img" src="/images/4x3/rose.JPG">
+                    </li>
+                    <li class="works__img__wrapper">
+                        <img class="works__img" src="/images/4x3/snowy_night.JPG">
+                    </li>
+                </ul>
+            </section>
         </main>
     </body>
 </html>
