Add clock image

--- a/public/clock/index.html
+++ b/public/clock/index.html
@@ -16,5 +16,14 @@
                 </div>
             </nav>
         </header>
+        <main class="main main--static_page">
+            <section class="grid_wrapper">
+                <div class="grid_wrapper__item grid_wrapper__item--img">
+                    <a class="img__link" target="_blank" ref="noopener noreferrer" href="/images/4x3/clock.JPG">
+                        <img class="main__img" src="/images/4x3/clock.JPG">
+                    </a>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
