Swap 4x3 image with 16x9

--- a/public/clock/index.html
+++ b/public/clock/index.html
@@ -19,8 +19,8 @@
         <main class="main main--static_page">
             <section class="grid_wrapper">
                 <div class="grid_wrapper__item grid_wrapper__item--img">
-                    <a class="img__link" target="_blank" ref="noopener noreferrer" href="/images/4x3/clock.JPG">
-                        <img class="main__img" src="/images/4x3/clock.JPG">
+                    <a class="img__link" target="_blank" ref="noopener noreferrer" href="/images/16x9/cook_cafe_clock.JPG">
+                        <img class="main__img" src="/images/16x9/cook_cafe_clock.JPG">
                     </a>
                 </div>
             </section>
