--- a/public/clock/index.html
+++ b/public/clock/index.html
@@ -23,6 +23,17 @@
                         <img class="main__img" src="/images/16x9/cook_cafe_clock.JPG">
                     </a>
                 </div>
+                <div class="grid_wrapper__item grid_wrapper__item--details">
+                    <h1 class="static_page__title">Cafe Clock</h1>
+                </div>
+                <div class="grid_wrapper__item grid_wrapper__item--paragraph">
+                    <p class="static_page__paragraph">
+                        Ac turpis egestas maecenas pharetra convallis posuere morbi. Egestas congue quisque egestas diam in arcu cursus euismod quis. Et netus et malesuada fames ac turpis egestas maecenas pharetra. Amet commodo nulla facilisi nullam vehicula ipsum a arcu. Tortor pretium viverra suspendisse potenti nullam. Commodo nulla facilisi nullam vehicula ipsum a arcu cursus. Senectus et netus et malesuada fames ac turpis egestas sed. Accumsan tortor posuere ac ut consequat semper. Sit amet risus nullam eget felis eget nunc lobortis mattis. Pharetra convallis posuere morbi leo urna.
+                    </p>
+                    <p class="static_page__paragraph">
+                        Adipiscing elit duis tristique sollicitudin nibh sit amet commodo. Neque laoreet suspendisse interdum consectetur libero id. Sit amet massa vitae tortor condimentum lacinia quis vel eros. Felis eget velit aliquet sagittis. Libero nunc consequat interdum varius sit amet mattis vulputate. Diam in arcu cursus euismod quis viverra nibh cras. Sed cras ornare arcu dui vivamus arcu.
+                    </p>
+                </div>
             </section>
         </main>
     </body>
