--- a/public/clock/index.html
+++ b/public/clock/index.html
@@ -8,11 +8,11 @@
     <body>
         <header>
             <nav class="navigation">
-                <a class="navigation__item navigation__item--title navigation__item--visible" href="">Paige Cook</a>
+                <a class="navigation__item navigation__item--title navigation__item--visible" href="/">Paige Cook</a>
                 <div class="navigation__wrapper">
-                    <a class="navigation__item" href="">About Me</a>
-                    <a class="navigation__item" href="">Gallery</a>
-                    <a class="navigation__item" href="">Contact</a>
+                    <a class="navigation__item navigation__item--background_opacity" href="">About Me</a>
+                    <a class="navigation__item navigation__item--background_opacity" href="">Gallery</a>
+                    <a class="navigation__item navigation__item--background_opacity" href="">Contact</a>
                 </div>
             </nav>
         </header>
