Add white christmas static page

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
                         </a>
                     </li>
                     <li class="works__img__wrapper">
-                        <a class="img__link" href="snowy_night/">
-                            <img class="works__img" src="/images/4x3/snowy_night.JPG">
+                        <a class="img__link" href="white_christmas/">
+                            <img class="works__img" src="/images/4x3/white_christmas.JPG">
                         </a>
                     </li>
                 </ul>
