--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="/css/screen.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+        <script src="/js/screen.js" async></script>
     </head>
     <body>
         <header>
@@ -16,6 +18,9 @@
                     <a class="navigation__item navigation__item--background_opacity" href="">Contact</a>
                 </div>
             </nav>
+            <button class="navigation__button">
+                <i class="bi bi-list navigation__button_icon"></i>
+            </button>
         </header>
         <main>
             <section class="title_page">
